--- a/src/style.css
+++ b/src/style.css
@@ -67,25 +67,15 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
-  border: 1px solid gray;
 }
 
-button:hover {
-  border-color: #646cff;
-}
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -99,7 +89,9 @@ button:focus-visible {
 
   button {
     background-color: #f9f9f9;
+    border: none;
   }
+
 }
 
 .todo-delete-check-button {
@@ -115,7 +107,13 @@ button:focus-visible {
   padding: 10px 20px;
   margin: 15px 0;
 }
+#btn{
+  background-color: #858bffd3;
+}
 
+.delete-btn{
+  background-color: #ff9385d3;
+}
 .todo p {
   font-weight: 500;
   font-size: 18px;
@@ -154,12 +152,17 @@ input:focus {
   width: 25px;
 }
 
+@media screen and (max-width:500px) {
+  .create-todo-inp {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+  }
+
+  .create-todo-inp>input {
+    width: 100%;
+  }
 
 
-
-
-
-
-
-
-
+}
